fixed position gap in home page

--- a/public/css/users/show.css
+++ b/public/css/users/show.css
@@ -258,6 +258,12 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+#rightpane.col-3{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 @media screen and (max-width: 767px) {
     .container {
         display: flex;
